--- a/client/src/style/main.less
+++ b/client/src/style/main.less
@@ -28,3 +28,12 @@ html, body {
 .topic.card {
 	margin: 1em 0;
 }
+
+.error {
+    color: red;
+}
+
+.login.card {
+    max-width: 800px;
+    margin: 0 auto;
+}
