add topic filtering

--- a/client/src/style/main.less
+++ b/client/src/style/main.less
@@ -15,6 +15,16 @@ html, body {
 		margin: 1em;
 	});
 }
+.pageHeader {
+	margin: 1em 0;
+	h1 {
+		display: inline-block;
+		margin: 0;
+	}
+	* {
+		vertical-align: bottom
+	}
+}
 
 .topicList {
 	.nonmobile({
