--- a/client/src/style/main.less
+++ b/client/src/style/main.less
@@ -18,8 +18,11 @@ html, body {
 	margin: 1em 0;
 	h1 {
 		display: inline-block;
-		margin: 0;
+		margin: 0 1em 0 0;
 	}
+    & > div {
+        padding: 3px 0;
+    }
 	* {
 		vertical-align: bottom
 	}
