--- a/frontend/mopad.css
+++ b/frontend/mopad.css
@@ -1,53 +1,5 @@
 @font-face {
   font-family: "Roboto";
-  src: local("Roboto"), url(./fonts/roboto/Roboto-Black.ttf) format("truetype");
-  font-weight: 900;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: local("Roboto"),
-    url(./fonts/roboto/Roboto-BlackItalic.ttf) format("truetype");
-  font-weight: 900;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: local("Roboto"), url(./fonts/roboto/Roboto-Bold.ttf) format("truetype");
-  font-weight: 700;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: local("Roboto"),
-    url(./fonts/roboto/Roboto-BoldItalic.ttf) format("truetype");
-  font-weight: 700;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: local("Roboto"), url(./fonts/roboto/Roboto-Italic.ttf) format("truetype");
-  font-weight: 400;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: local("Roboto"), url(./fonts/roboto/Roboto-Light.ttf) format("truetype");
-  font-weight: 300;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: local("Roboto"),
-    url(./fonts/roboto/Roboto-LightItalic.ttf) format("truetype");
-  font-weight: 300;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "Roboto";
   src: local("Roboto"), url(./fonts/roboto/Roboto-Medium.ttf) format("truetype");
   font-weight: 500;
 }
@@ -55,30 +7,8 @@
 @font-face {
   font-family: "Roboto";
   src: local("Roboto"),
-    url(./fonts/roboto/Roboto-MediumItalic.ttf) format("truetype");
-  font-weight: 500;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: local("Roboto"),
     url(./fonts/roboto/Roboto-Regular.ttf) format("truetype");
   font-weight: 400;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: local("Roboto"), url(./fonts/roboto/Roboto-Thin.ttf) format("truetype");
-  font-weight: 100;
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: local("Roboto"),
-    url(./fonts/roboto/Roboto-ThinItalic.ttf) format("truetype");
-  font-weight: 100;
-  font-style: italic;
 }
 
 h1,
@@ -236,7 +166,35 @@ body.center {
   text-align: center;
 }
 
-#talks > h1 {
+#talks {
+  padding: 0 0 5.5rem 0;
+}
+
+#talks .add {
+  position: fixed;
+  z-index: 1;
+  right: 1rem;
+  bottom: 1rem;
+  cursor: pointer;
+  width: 4rem;
+  height: 4rem;
+  font-size: 1.667rem;
+  font-family: inherit;
+  line-height: 4rem;
+  text-align: center;
+  color: #fff;
+  background-color: #388e3c;
+  box-sizing: border-box;
+  border: none;
+  border-radius: 2rem;
+  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.25), 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
+}
+
+#talks .add:hover {
+  background-color: #43a047;
+}
+
+#talks .title {
   font-size: 2.5rem;
   font-weight: 500;
   color: #000;
@@ -279,23 +237,50 @@ body.center {
 }
 
 #talks .talks {
-  padding: 0 1rem;
+  padding: 0.5rem 1rem;
   display: grid;
-  grid-template-columns: 100vw;
+  grid-template-columns: calc(100vw - 2rem);
   grid-auto-rows: min-content;
+  column-gap: 1rem;
+  row-gap: 1rem;
+  align-items: start;
   box-sizing: border-box;
 }
 
 #talks .talks .talk {
   display: grid;
+  position: relative;
   width: calc(100vw - 2rem);
   grid-template-columns: calc(100vw - 2rem);
   grid-template-rows: min-content min-content min-content min-content min-content min-content;
-  margin: 0.5rem 0;
   background-color: #fff;
   border-radius: 1rem;
   box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.25);
-  overflow: hidden;
+}
+
+#talks .talks .talk .delete {
+  position: absolute;
+  cursor: pointer;
+  top: -0.75rem;
+  right: -0.75rem;
+  width: 2rem;
+  height: 2rem;
+  font-size: 1.667rem;
+  font-family: inherit;
+  font-weight: 500;
+  text-align: center;
+  line-height: 2rem;
+  color: #e64a19;
+  background-color: #fff;
+  box-sizing: border-box;
+  border: none;
+  border-radius: 1rem;
+  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.25);
+}
+
+#talks .talks .talk .delete:hover {
+  color: #fff;
+  background-color: #e64a19;
 }
 
 #talks .talks .talk .title {
@@ -331,15 +316,20 @@ body.center {
   cursor: pointer;
 }
 
+#talks .talks .talk .title.editable {
+  border-radius: 1rem 1rem 0 0;
+}
+
 #talks .talks .talk .editable:hover {
   background-color: #eee;
 }
 
 #talks .talks .talk .operation {
-  padding: 0.25rem 1rem 1rem 1rem;
+  padding: 0.5rem 1rem 1rem 1rem;
   display: grid;
   grid-template-columns: 1fr min-content min-content;
   grid-template-rows: min-content;
+  column-gap: 1rem;
 }
 
 #talks .talks .talk .operation button {
@@ -358,18 +348,6 @@ body.center {
   border-radius: 0.25rem;
 }
 
-#talks .talks .talk .operation button.delete {
-  color: #e64a19;
-  border-color: #ffccbc;
-  grid-column: 1 / 2;
-  justify-self: start;
-}
-
-#talks .talks .talk .operation button.delete,
-#talks .talks .talk .operation button.noob {
-  margin-right: 1rem;
-}
-
 #talks .talks .talk .operation button.noob {
   grid-column: 2 / 3;
 }
@@ -380,10 +358,6 @@ body.center {
 
 #talks .talks .talk .operation button:hover {
   border-color: #388e3c;
-}
-
-#talks .talks .talk .operation button.delete:hover {
-  border-color: #e64a19;
 }
 
 #talks .talks .talk.participating {
@@ -417,10 +391,6 @@ body.center {
   background-color: #43a047;
 }
 
-#talks .talks .talk.participating .operation button.delete:hover {
-  border-color: #c8e6c9;
-}
-
 #talks .talks .talk.participating .operation button.participating {
   border-color: transparent;
   color: #388e3c;
@@ -430,4 +400,71 @@ body.center {
 
 #talks .talks .talk.participating .operation button.participating:hover {
   background-color: #c8e6c9;
+}
+
+@media (min-width: 32em) {
+  #talks .talks {
+    grid-template-columns: repeat(2, calc((100vw - 3rem) / 2));
+  }
+
+  #talks .talks .talk {
+    width: calc((100vw - 3rem) / 2);
+    grid-template-columns: calc((100vw - 3rem) / 2);
+  }
+}
+
+@media (min-width: 48em) {
+  #talks .talks {
+    grid-template-columns: repeat(3, calc((100vw - 4rem) / 3));
+  }
+
+  #talks .talks .talk {
+    width: calc((100vw - 4rem) / 3);
+    grid-template-columns: calc((100vw - 4rem) / 3);
+  }
+}
+
+@media (min-width: 64em) {
+  #talks .talks {
+    grid-template-columns: repeat(4, calc((100vw - 5rem) / 4));
+  }
+
+  #talks .talks .talk {
+    width: calc((100vw - 5rem) / 4);
+    grid-template-columns: calc((100vw - 5rem) / 4);
+  }
+}
+
+@media (min-width: 80em) {
+  #talks .talks {
+    grid-template-columns: repeat(5, calc((100vw - 6rem) / 5));
+  }
+
+  #talks .talks .talk {
+    width: calc((100vw - 6rem) / 5);
+    grid-template-columns: calc((100vw - 6rem) / 5);
+  }
+}
+
+@media (min-width: 96em) {
+  body {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: min-content;
+    justify-items: center;
+    align-items: center;
+  }
+
+  #talks .heading {
+    width: 94rem;
+  }
+
+  #talks .talks {
+    grid-template-columns: repeat(6, calc((96rem - 7rem) / 6));
+  }
+
+  #talks .talks .talk {
+    width: calc((96rem - 7rem) / 6);
+    grid-template-columns: calc((96rem - 7rem) / 6);
+  }
 }
