--- a/frontend/mopad.css
+++ b/frontend/mopad.css
@@ -338,7 +338,7 @@ body.center {
 #talks .talks .talk .operation {
   padding: 0.5rem 1rem 1rem 1rem;
   display: grid;
-  grid-template-columns: 1fr min-content min-content;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: min-content;
   column-gap: 1rem;
 }
@@ -360,11 +360,11 @@ body.center {
 }
 
 #talks .talks .talk .operation button.noob {
-  grid-column: 2 / 3;
+  grid-column: 1 / 2;
 }
 
 #talks .talks .talk .operation button.nerd {
-  grid-column: 3 / 4;
+  grid-column: 2 / 3;
 }
 
 #talks .talks .talk .operation button:hover {
